@@ -4,28 +4,28 @@ plugin_LTLIBRARIES = fancy.la
 
 fancy_la_SOURCES = \
         fancy_viewer.c \
-		fancy_viewer.h \
-		fancy_prefs.c \
-		fancy_prefs.h \
-	 	gettext.h
+        fancy_viewer.h \
+        fancy_prefs.c \
+        fancy_prefs.h \
+        gettext.h
 
 fancy_la_LDFLAGS = \
-	-avoid-version -module \
-	$(GTK_LIBS) \
+    -avoid-version -module \
+    $(GTK_LIBS) \
     $(GTKPRINTUNIX_LIBS) \
-	$(WEBKIT_LIBS)
+    $(WEBKIT_LIBS)
 
 INCLUDES = \
-	-I$(top_srcdir)/src \
-	-I$(top_srcdir)/src/common \
-	-I$(top_srcdir)/src/gtk
+    -I$(top_srcdir)/src \
+    -I$(top_srcdir)/src/common \
+    -I$(top_srcdir)/src/gtk
 
 AM_CPPFLAGS = \
-	-Wall \
-	$(CLAWS_MAIL_CFLAGS) \
-	$(GLIB_CFLAGS) \
-	$(GTK_CFLAGS) \
-	$(OPENSSL_CFLAGS) \
+    -Wall \
+    $(CLAWS_MAIL_CFLAGS) \
+    $(GLIB_CFLAGS) \
+    $(GTK_CFLAGS) \
+    $(OPENSSL_CFLAGS) \
     $(GTKPRINTUNIX_CFLAGS) \
-	$(WEBKIT_CFLAGS) \
-	-DLOCALEDIR=\""$(localedir)"\"
+    $(WEBKIT_CFLAGS) \
+    -DLOCALEDIR=\""$(localedir)"\"
